--- a/github-page/.github/workflows/build.yml
+++ b/github-page/.github/workflows/build.yml
@@ -7,16 +7,15 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
           node-version: '16.x'
       - name: Build web-app
-        run: |
-          npm ci
-          npm run build
+      -  run: npm ci
+      -  run: npm run build
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
