--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "github-pages",
+  "name": "github-docs",
   "private": true,
   "version": "0.0.0",
-  "homepage": ".",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
