--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "public-projects",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://murilobarbosa2002.github.io/public-projects/",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
